# shitecoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libshitecoinconsensus.pc.in
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  shitecoin.sln  shitecoin_config.h  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  shitecoin-cli.bash-completion  shitecoin-qt.pro  shitecoin-tx.bash-completion  shitecoind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  shitecoin-conf.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  shitecoin-cli.1  shitecoin-qt.1  shitecoin-tx.1  shitecoin-util.1  shitecoin-wallet.1  shitecoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  addrdb.cpp  (+156 more)
(+1133 files in other folders)
