dist_man1_MANS=

if BUILD_shitecoinD
  dist_man1_MANS+=shitecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=shitecoin-qt.1
endif

if BUILD_shitecoin_CLI
  dist_man1_MANS+=shitecoin-cli.1
endif

if BUILD_shitecoin_TX
  dist_man1_MANS+=shitecoin-tx.1
endif

if BUILD_shitecoin_UTIL
  dist_man1_MANS+=shitecoin-util.1
endif

if ENABLE_WALLET
if BUILD_shitecoin_WALLET
  dist_man1_MANS+=shitecoin-wallet.1
endif
endif
